	- Hide the vote dropdown on v+ pages when the VN is already on the wishlist
	- Don't search for the ADV category when searching for the Game Boy Advance
	- Keep VN relations on r+ pages ordered by title
	- VN search doesn't match on titles of older release revisions anymore
	- Don't forget to update the vn.c_* columns when hiding/unhiding a release
	- Fixed month display on VNBrowse

2.1 - 2008-12-29
	- Skin support
	- 'show all items' tab to large forms
	- Allow items to be selected using the mouse on the dropdown search
	- [spoiler] tag produces mouseover-style spoilers instead of ROT13
	- Fixed tiny timezone-related bug
	- Re-added release list dropdown on VN pages
	- Added [quote] tag to bb2html
	- fixed URL parser in bb2html

2.0 - 2008-12-20
	- New layout
	- Massive code rewrite:
	  - Switched to YAWF
	  - Removed template system
	  - Split DB functions in several files
	  - Converted absolute paths to be relative to the root directory
	- Database changes:
	  - Added caching of edit and vote counts in users.c_votes and .c_changes
	  - Split users.flags into users.show_nsfw and .show_list (boolean type)
	  - Global statistics are cached in stats_cache
	- URL changes:
	  - /p and /v don't work anymore, use /[pv]/all
	  - /u/list/* -> /u/* and /u/list -> /u/list/all
	  - Revert URL changed from /x99/edit?rev=1 to /x99.1/edit
	  - /v+/stats and /v+/scr moved into /v+
	- Functionality changes:
	  - Ability to sort the userlist on vote and change counts
	  - Added threads and posts counts to the global statistics
	  - Improved diff calculation
	  - Whitespace around input fields are removed
	  - Automated edits filter to history browser
	  - Number of threads is shown in the discussion tab for each item
	  - Boardmods can edit threads without updating the last edited field
	  - No more RSS feeds for changes (will be replaced with a notification
	    system in the future)
	  - Improved formsub interface
	  - Improved VN relation editor interface